<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:hint="@string/prompt_name" />





    <ProgressBar
        android:id="@+id/prgBar_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"

        android:layout_marginBottom="64dp"

        android:visibility="gone" />



    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/names">

        <EditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"


            android:hint="@string/prompt_email"

            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />



        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="2"


            android:layout_marginLeft="8dp"

            android:enabled="true"
            android:text="@string/action_register" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/LinearLayout01"

        android:layout_marginTop="64dp"
        >

        <EditText
            android:id="@+id/vericode"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/prompt_vericode"

            android:layout_weight="1"

            android:inputType="text"
            android:selectAllOnFocus="true" />


        <Button
            android:id="@+id/btn_vericode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="2"

            android:layout_marginLeft="8dp"

            android:enabled="true"
            android:text="@string/action_vericode" />


    </LinearLayout>




    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="48dp"

        android:layout_below="@+id/LinearLayout02"

        android:layout_alignParentRight="true"

        android:enabled="true"
        android:text="@string/action_cancel" />


</RelativeLayout>